Fixed overflow

--- a/src/css/method-draw.css
+++ b/src/css/method-draw.css
@@ -145,7 +145,7 @@ button:focus {
  }
 
 #svgcontent {
-  overflow: hidden;
+  overflow: visible;
 }
 
 .wireframe #svgcontent * {
